--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 
 <html>
-
+    <head>
+        <title>Cooker shades</title>
+    </head>
 <style>
 body, html {
     height: 100%;
