--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <html>
     <head>
         <title>Cooker shades</title>
+        <meta name="description" content="Not for profit clubber eye protection agency. Cooked eyewear lifestyle brand.">
+        <meta name="keywords" content="Cooked,Cooker,Shades,Club,Rave,Berghain,Berlin,Christianah Jones,Eyewear,Club,Clubber,Festival,Fun">
     </head>
 <style>
 body, html {
